tests/ui/traits/trait-upcasting/type-checking-test-1.current.stderr
error[E0605]: non-primitive cast: `&dyn Foo` as `&dyn Bar<_>`
  --> $DIR/type-checking-test-1.rs:18:13
   |
LL |     let _ = x as &dyn Bar<_>; // Ambiguous
   |             ^^^^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
